--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,8 +15,10 @@
         <td><%= user.email %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= link_to "Ver", user_path(user), class: "btn btn-primary btn-sm" %></td>
+        <td><%= link_to "Show", user_path(user), class: "btn btn-primary btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<p><%= link_to 'Add New User', new_user_path %></p>
