--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
 <p><strong>Email:</strong> <%= @user.email %></p>
 
-<%= link_to "Volver a la lista", users_path, class: "btn btn-secondary" %>
+<%= link_to "Back to list", users_path, class: "btn btn-secondary" %>
+
+<p><%= link_to 'Back to Users', users_path %></p>
+<p><%= link_to 'Edit this User', edit_user_path(@user) %></p>
+<p><%= link_to 'Add New User', new_user_path %></p>
