--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,24 +1,27 @@
-<h1>Mensajes</h1>
+<h1>Messages List</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>User</th>
       <th>Chat ID</th>
-      <th>Usuario ID</th>
-      <th>Mensaje</th>
-      <th>Acción</th>
+      <th>Body</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
     <% @messages.each do |message| %>
       <tr>
+        <td><%= message.user.first_name %></td>
         <td><%= message.chat_id %></td>
-        <td><%= message.user_id %></td>
         <td><%= message.body %></td>
-        <td><%= link_to "Show", message_path(message), class: "btn btn-primary btn-sm" %></td>
+        <td>
+          <%= link_to 'Show', message_path(message), class: "btn btn-primary btn-sm" %>
+          <%= link_to 'Edit', edit_message_path(message), class: "btn btn-warning btn-sm" %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<p><%= link_to 'Add New Message', new_message_path %></p>
+<p><%= link_to 'Add New Message', new_message_path, class: "btn btn-success" %></p>
