--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,9 +1,9 @@
-<h1>Mensaje</h1>
+<h1>Message Details</h1>
+
+<p><strong>Sender:</strong> <%= @message.user.first_name %> <%= @message.user.last_name %></p>
 <p><strong>Chat ID:</strong> <%= @message.chat_id %></p>
-<p><strong>Usuario ID:</strong> <%= @message.user_id %></p>
-<p><strong>Contenido:</strong> <%= @message.body %></p>
+<p><strong>Message:</strong> <%= @message.body %></p>
 
-<%= link_to "Back to list", messages_path, class: "btn btn-secondary" %>
-
-<p><%= link_to 'Back to Messages', messages_path %></p>
-<p><%= link_to 'Add New Message', new_message_path %></p>
+<p><%= link_to 'Edit this Message', edit_message_path(@message), class: "btn btn-primary" %></p>
+<p><%= link_to 'Back to Messages', messages_path, class: "btn btn-secondary" %></p>
+<p><%= link_to 'Add New Message', new_message_path, class: "btn btn-success" %></p>
