--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,4 +30,6 @@
   <div>
     <%= form.submit %>
   </div>
+  <p><%= link_to 'Back to Users', users_path, class: "btn btn-secondary" %></p>
+
 <% end %>
