--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,13 @@
-<h1>Lista de Usuarios</h1>
+<h1>User List</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Email</th>
-      <th>Nombre</th>
-      <th>Apellido</th>
-      <th>Acción</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Messages Sent</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -15,10 +16,14 @@
         <td><%= user.email %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= link_to "Show", user_path(user), class: "btn btn-primary btn-sm" %></td>
+        <td><%= user.messages.count %></td>
+        <td>
+          <%= link_to "Show", user_path(user), class: "btn btn-primary btn-sm" %>
+          <%= link_to "Edit", edit_user_path(user), class: "btn btn-warning btn-sm" %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<p><%= link_to 'Add New User', new_user_path %></p>
+<p><%= link_to 'Add New User', new_user_path, class: "btn btn-success" %></p>
