--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,41 @@
 <div class="container mt-5 d-flex justify-content-center">
-  <div class="card p-4" style="min-width: 400px;">
-    <h2 class="mb-4">Sign up</h2>
+  <div class="card p-4 shadow" style="min-width: 400px;">
+    <h2 class="mb-4 text-center">Sign up</h2>
+
+    <% if resource.errors.any? %>
+      <div class="alert alert-danger">
+        <h4><%= pluralize(resource.errors.count, "error") %> impidieron crear el usuario:</h4>
+        <ul class="mb-0">
+          <% resource.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
     <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |form| %>
       <div class="mb-3">
-        <%= form.label :email %>
+        <%= form.label :first_name, class: "form-label" %>
+        <%= form.text_field :first_name, class: "form-control" %>
+      </div>
+
+      <div class="mb-3">
+        <%= form.label :last_name, class: "form-label" %>
+        <%= form.text_field :last_name, class: "form-control" %>
+      </div>
+
+      <div class="mb-3">
+        <%= form.label :email, class: "form-label" %>
         <%= form.email_field :email, autofocus: true, class: "form-control" %>
       </div>
 
       <div class="mb-3">
-        <%= form.label :password %>
+        <%= form.label :password, class: "form-label" %>
         <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
       </div>
 
       <div class="mb-3">
-        <%= form.label :password_confirmation %>
+        <%= form.label :password_confirmation, class: "form-label" %>
         <%= form.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
       </div>
 
@@ -22,6 +43,8 @@
     <% end %>
 
     <hr>
-    <%= link_to "Log in", new_user_session_path, class: "btn btn-link" %>
+    <div class="text-center">
+      <%= link_to "Already have an account? Log in", new_user_session_path, class: "btn btn-link" %>
+    </div>
   </div>
 </div>
