--- a/app/views/layouts/_app_navbar.html.erb
+++ b/app/views/layouts/_app_navbar.html.erb
@@ -1,21 +1,28 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">WhatsNew</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mt-4 shadow-sm">
+  <div class="container">
+    <%= link_to "Whats New", root_path, class: "navbar-brand fw-bold" %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to 'Usuarios', users_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Chats', chats_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Mensajes', messages_path, class: 'nav-link' %>
-        </li>
+      <ul class="navbar-nav ms-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Inbox", chats_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { turbo: false }, class: "btn btn-outline-danger ms-2" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary me-2" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
