--- a/app/views/layouts/_app_navbar.html.erb
+++ b/app/views/layouts/_app_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mt-4 shadow-sm">
   <div class="container">
-    <%= link_to "Whats New", root_path, class: "navbar-brand fw-bold" %>
+    <%= link_to "Whats New", user_signed_in? ? authenticated_root_path : unauthenticated_root_path, class: "navbar-brand fw-bold" %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
